<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
    tools:context=".ForgotPasswordActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            app:titleTextColor="@color/secondary_text"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <!--<ImageView-->
            <!--android:layout_width="@dimen/logo_w_h"-->
            <!--android:layout_height="@dimen/logo_w_h"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:src="@mipmap/ic_launcher" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:padding="10dp"-->
            <!--android:text="Forgot Password?"-->
            <!--android:textColor="@color/secondary_text"-->
            <!--android:textSize="20dp" />-->

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/secondary_text"
            android:textSize="18dp" />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:padding="@dimen/activity_horizontal_margin"-->
            <!--android:text="@string/forgot_password_msg"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="14dp" />-->


        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:padding="@dimen/activity_horizontal_margin"-->
            <!--android:text="@string/forgot_password_msg"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="14dp" />-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textSize="22dp"
                android:textColor="@color/secondary_text"
                />
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:textSize="18dp"
                android:paddingLeft="10dp"
                android:textStyle="normal"
                android:background="@drawable/shape"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/divider" />
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp" />



        <!--</android.support.design.widget.TextInputLayout>-->

        <!-- Login Button -->

        <Button


            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/yellow"
            android:gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/btn_reset_password"
            android:textStyle="bold"
            android:textColor="@color/secondary_text" />




        <!--<Button-->
            <!--android:id="@+id/button_user_sign_up"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:onClick="onSignUpClicked"-->
            <!--android:background="@color/yellow"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:padding="10dp"-->
            <!--android:textSize="20dp"-->
            <!--android:text="Sign Up Now"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/secondary_text"/>-->



        <!--<Button-->
            <!--android:id="@+id/btn_back"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_back"-->
            <!--android:textColor="@color/colorAccent" />-->

    </LinearLayout>

    </RelativeLayout>


</RelativeLayout>






